--- a/view/mrp_view.xml
+++ b/view/mrp_view.xml
@@ -21,7 +21,7 @@
 			<field name="type">form</field>
 			<field name="inherit_id" ref="mrp.mrp_production_form_view" />
 			<field name="arch" type="xml">
-				<button name="%(stock.action_partial_move)d" string="Partial"
+				<button name="%(stock.action_partial_move_server)d" string="Partial"
 					type="action" states="confirmed,assigned" icon="gtk-justify-fill"
 					position="before">
 					<field name="prodlot_id" context="{'product_id': product_id}" />
