[WORKAROUND] Creating new children from that form resulted in wrong parent-child-relationships, because id & parent_id is used from analytic account, not project. Set the list to read only, to prevent creating projects from there.

--- a/view/project_view.xml
+++ b/view/project_view.xml
@@ -10,7 +10,7 @@
 			<field name="arch" type="xml">
                     <notebook colspan="4" position="inside">
                     <page string="Child projects">
-                    	<field name="child_ids" nolabel="1"/>
+                    	<field name="child_ids" nolabel="1" readonly="1" />
                     </page>
                     </notebook>
 			</field>
