--- a/wizard/merge_picking_view.xml
+++ b/wizard/merge_picking_view.xml
@@ -11,7 +11,7 @@
 					<separator colspan="4" string="Picking target to merge into" />
 					<field name="target_picking_id" required="1" />
 					<group col="2" colspan="4">
-						<button icon="gtk-cancel" special="cancel" string="Cancel" />
+						<button icon="gtk-cancel" special="cancel" string="Do not merge" />
 						<button name="do_target" string="Choose Target" type="object"
 							icon="gtk-go-forward" />
 					</group>
@@ -26,8 +26,8 @@
 
 		<menuitem action="action_merge_picking" id="menu_stock_moves_merge_picking"
 			parent="stock.menu_traceability" sequence="100" />
-	
-	
+
+
 		<record id="merge_picking_form_target" model="ir.ui.view">
 			<field name="name">Merge Picking</field>
 			<field name="model">stock.move.picking.merge</field>
@@ -35,14 +35,32 @@
 			<field name="arch" type="xml">
 				<form string="Merge Picking">
 					<field name="target_picking_id" required="1" readonly="1" />
-					<field name="target_picking_id_type" invisible="1" />
 					<field name="target_picking_id_state" invisible="1" />
+					<field name="target_picking_id_type" invisible="1" />
+					<field name="target_picking_id_invoice_state" invisible="1" />
+
+					<field name="target_picking_id_backorder_id" invisible="1" />
+					<field name="target_picking_id_stock_journal_id" invisible="1" />
+					<field name="target_picking_id_location_id" invisible="1" />
+					<field name="target_picking_id_location_dest_id" invisible="1" />
 					<field name="target_picking_id_address_id" invisible="1" />
+					<field name="target_picking_id_company_id" invisible="1" />
+
 					<separator colspan="4" string="Pickings to merge into the target" />
-					<field name="picking_ids" colspan="4" nolabel="1" 
-						domain="[('id','&lt;&gt;',target_picking_id),('state','=',target_picking_id_state),('address_id','=',target_picking_id_address_id)]" />
+					<field name="picking_ids" colspan="4" nolabel="1"
+						domain="[('id','&lt;&gt;',target_picking_id),
+						        ('state','=',target_picking_id_state),
+						        ('type','=',target_picking_id_type),
+						        ('invoice_state','=',target_picking_id_invoice_state),
+						        ('backorder_id','=',target_picking_id_backorder_id),
+						        ('stock_journal_id','=',target_picking_id_stock_journal_id),
+						        ('location_id','=',target_picking_id_location_id),
+						        ('location_dest_id','=',target_picking_id_location_dest_id),
+						        ('address_id','=',target_picking_id_address_id),
+						        ('company_id','=',target_picking_id_company_id),
+						        ]" />
 					<group col="2" colspan="4">
-						<button icon="gtk-cancel" special="cancel" string="Cancel" />
+						<button icon="gtk-cancel" special="cancel" string="Do not merge" />
 						<button name="do_check" string="Check" type="object"
 							icon="gtk-go-forward" />
 					</group>
@@ -62,7 +80,7 @@
 					<separator colspan="4" string="Please verify and check to merge" />
 					<field name="commit_merge" />
 					<group col="2" colspan="4">
-						<button icon="gtk-cancel" special="cancel" string="Cancel" />
+						<button icon="gtk-cancel" special="cancel" string="Do not merge" />
 						<button name="do_merge" string="Merge" type="object"
 							icon="terp-accessories-archiver+" />
 					</group>
