--- a/view/purchase_view.xml
+++ b/view/purchase_view.xml
@@ -44,7 +44,7 @@
             <field name="view_type">form</field>
             <field name="view_id" eval="False"/>
         </record>
-        <menuitem action="action_order_line_tree1" id="menu_action_order_line_tree1" parent="purchase.menu_purchase_root"
+        <menuitem action="action_order_line_tree1" id="menu_action_order_line_tree1" parent="purchase.menu_procurement_management"
             groups="base.group_extended"/>
 		 
 <!-- 			<field name="arch" type="xml">
