--- a/view/mrp_view.xml
+++ b/view/mrp_view.xml
@@ -5,8 +5,20 @@
 		<record id="mrp_tree" model="ir.ui.view">
 			<field name="name">mrp.order.saleref.tree</field>
 			<field name="model">mrp.production</field>
-			<field name="type">form</field>
+			<field name="type">tree</field>
 			<field name="inherit_id" ref="mrp.mrp_production_tree_view" />
+			<field name="arch" type="xml">
+				<field name="name" position="after">
+					<field name="sale_ref" />
+				</field>
+			</field>
+		</record>
+		
+		<record id="mrp_search" model="ir.ui.view">
+			<field name="name">mrp.order.saleref.tree</field>
+			<field name="model">mrp.production</field>
+			<field name="type">search</field>
+			<field name="inherit_id" ref="mrp.view_mrp_production_filter" />
 			<field name="arch" type="xml">
 				<field name="name" position="after">
 					<field name="sale_ref" />
