--- a/view/purchase_view.xml
+++ b/view/purchase_view.xml
@@ -45,20 +45,8 @@
             <field name="view_id" eval="False"/>
         </record>
         <menuitem action="action_order_line_tree1" id="menu_action_order_line_tree1" parent="purchase.menu_procurement_management"
-            groups="base.group_extended"/>
+            groups="base.group_extended" sequence=40/>
 		 
-<!-- 			<field name="arch" type="xml">
-                <tree colors="red:date_planned&lt;=current_date" string="Purchase Order Lines">
-                    <field name="order_id"/>
-                    <field name="name"/>
-                    <field name="date_planned"/>
-                    <field name="product_id"/>
-                    <field name="product_qty"/>
-                    <field name="product_uom"/>
-                    <field name="price_unit"/>
-                    <field name="price_subtotal"/>
-                </tree>
-            </field> -->
 
     </data>
 </openerp>
