--- a/view/purchase_view.xml
+++ b/view/purchase_view.xml
@@ -14,7 +14,7 @@
 			</field>
 		</record>
 		<menuitem action="purchase_form_all_action" id="menu_purchase_form_all_action"
-			parent="purchase.menu_procurement_management" sequence=30 />
+			parent="purchase.menu_procurement_management" sequence="40" />
 
 	</data>
 </openerp>
