--- a/boilerplates_sale/wizard/boilerplates_sale_view.xml
+++ b/boilerplates_sale/wizard/boilerplates_sale_view.xml
@@ -2,34 +2,22 @@
 <openerp>
 	<data>
 
-		<record id="boilerplates_sale_wiz" model="ir.ui.view">
+		<record id="boilerplates_wiz" model="ir.ui.view">
 			<field name="name">Boilerplates</field>
 			<field name="model">boilerplate.wizard.sale</field>
 			<field name="type">form</field>
+			<field name="inherit_id" ref="boilerplates.boilerplates_wiz" />
 			<field name="arch" type="xml">
-				<form string="Add Boilerplate">
-					<field name="boilerplate_id" colspan="4" required="1"/>
+				<field name="remote_id" invisible="1" position="replace">
 					<field name="remote_id" invisible="1" />
-					<group col="2" colspan="4">
-						<button icon="gtk-cancel" special="cancel" string="Cancel" />
-						<button name="do_boilerplate" string="Add Boilerplate" type="object"
-							icon="gtk-go-forward" />
-					</group>
-				</form>
+				</field>
 			</field>
 		</record>
 
-		<act_window
-			id="action_boilerplate_sale"
-			name="Add Boilerplate"
-			res_model="boilerplate.wizard.sale"
-			src_model="sale.order"
-			view_type="form"
-			view_mode="form"
-			target="new"
-			view_id="boilerplates_sale_wiz" 
-			domain="[('remote_id', '=', active_id)]"
-		/>
+		<act_window id="action_boilerplate_sale" name="Add Boilerplate"
+			res_model="boilerplate.wizard.sale" src_model="sale.order" view_type="form"
+			view_mode="form" target="new" view_id="boilerplates_wiz"
+			domain="[('remote_id', '=', active_id)]" />
 
 	</data>
 </openerp>
