--- a/report/stock_report.xml
+++ b/report/stock_report.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-        <report id="report_picking_list" model="stock.picking" name="stock.picking.list" string="Packing list" rml="stock_move_notes/report/picking.rml"/>
+        <report id="report_picking_list_notes" model="stock.picking" name="stock.picking.list.notes" string="Packing list" rml="stock_move_notes/report/picking.rml"/>
     </data>
 </openerp>
