added new group Survey Manager, and denied access to normal survey users to survey_change_response_user

--- a/survey_change_response_user/wizard/survey_answer.xml
+++ b/survey_change_response_user/wizard/survey_answer.xml
@@ -31,7 +31,7 @@
 			target="new" view_id="survey_user_changer" />
 
 		<menuitem action="action_survey_user_changer" id="menu_survey_user_changer"
-			parent="survey.menu_answer_surveys" sequence="100" />
+			parent="survey.menu_answer_surveys" groups="base.group_tool_manager,survey.group_survey_manager" sequence="100" />
 
 	</data>
 </openerp>
