xml files autoformatted

--- a/survey_change_response_user/wizard/survey_answer.xml
+++ b/survey_change_response_user/wizard/survey_answer.xml
@@ -11,8 +11,8 @@
 			<field name="arch" type="xml">
 				<form string="Survey User Changer">
 					<field name="user_id" colspan="2" />
-					<field name="survey_ids" nolabel="1"
-						colspan="4" domain="[('user_id','=',uid)]">
+					<field name="survey_ids" nolabel="1" colspan="4"
+						domain="[('user_id','=',uid)]">
 						<tree>
 							<field name="survey_id" />
 							<field name="date_create" />
@@ -31,7 +31,8 @@
 			target="new" view_id="survey_user_changer" />
 
 		<menuitem action="action_survey_user_changer" id="menu_survey_user_changer"
-			parent="survey.menu_answer_surveys" groups="base.group_tool_manager,survey.group_survey_manager" sequence="100" />
+			parent="survey.menu_answer_surveys" groups="base.group_tool_manager,survey.group_survey_manager"
+			sequence="100" />
 
 	</data>
 </openerp>
