--- a/stock_merge_picking_sale/view/stock_view.xml
+++ b/stock_merge_picking_sale/view/stock_view.xml
@@ -40,7 +40,7 @@
 			<field name="inherit_id" ref="stock.view_picking_in_form" />
 			<field name="arch" type="xml">
 				<xpath
-					expr="//form/notebook/page[@string='Products']/field[@name='move_lines']/tree/field[@name='location_dest_id']"
+					expr="//form/notebook/page[@string='General Information']/field[@name='move_lines']/tree/field[@name='location_dest_id']"
 					position="before">
 					<field name="premerge_sale_id" string="Sales Order" />
 				</xpath>
