--- a/boilerplates_account/view/boilerplates_view.xml
+++ b/boilerplates_account/view/boilerplates_view.xml
@@ -7,7 +7,7 @@
 			<field name="name">boilerplates.account.text.search</field>
 			<field name="model">boilerplates.text</field>
 			<field name="type">search</field>
-			<field name="inherit_id" ref="boilerplates_modularity.text_search" />
+			<field name="inherit_id" ref="boilerplates.text_search" />
 			<field name="arch" type="xml">
 				<xpath expr="//group[@string='Usability...']" position="inside">
 					<filter name="filter_usability_account" string='Accounting' icon="terp-go-week"
@@ -19,7 +19,7 @@
 		<record id="text_form" model="ir.ui.view">
 			<field name="name">boilerplates.modularity.text.form</field>
 			<field name="model">boilerplates.text</field>
-			<field name="inherit_id" ref="boilerplates_modularity.text_form" />
+			<field name="inherit_id" ref="boilerplates.text_form" />
 			<field name="type">form</field>
 			<field name="arch" type="xml">
 				<page string="Usability" position="inside">
