--- a/boilerplates_mrp/wizard/boilerplates_view.xml
+++ b/boilerplates_mrp/wizard/boilerplates_view.xml
@@ -2,9 +2,9 @@
 <openerp>
 	<data>
 
-		<record id="boilerplates_wiz" model="ir.ui.view">
+		<record id="boilerplates_wiz_mrp_order" model="ir.ui.view">
 			<field name="name">Boilerplates</field>
-			<field name="model">boilerplate.wizard.purchase</field>
+			<field name="model">boilerplate.wizard.mrp.order</field>
 			<field name="type">form</field>
 			<field name="inherit_id" ref="boilerplates.boilerplates_wiz" />
 			<field name="arch" type="xml">
@@ -14,9 +14,27 @@
 			</field>
 		</record>
 
-		<act_window id="action_boilerplate_purchase" name="Add Boilerplate"
-			res_model="boilerplate.wizard.purchase" src_model="purchase.order" view_type="form"
-			view_mode="form" target="new" view_id="boilerplates_wiz"
+		<act_window id="action_boilerplate_mrp_order" name="Add Boilerplate"
+			res_model="boilerplate.wizard.mrp.order" src_model="mrp.production"
+			view_type="form" view_mode="form" target="new" view_id="boilerplates_wiz_mrp_order"
+			domain="[('remote_id', '=', active_id)]" />
+
+
+		<record id="boilerplates_wiz_mrp_bom" model="ir.ui.view">
+			<field name="name">Boilerplates</field>
+			<field name="model">boilerplate.wizard.mrp.bom</field>
+			<field name="type">form</field>
+			<field name="inherit_id" ref="boilerplates.boilerplates_wiz" />
+			<field name="arch" type="xml">
+				<field name="remote_id" invisible="1" position="replace">
+					<field name="remote_id" invisible="1" />
+				</field>
+			</field>
+		</record>
+
+		<act_window id="action_boilerplate_mrp_bom" name="Add Boilerplate"
+			res_model="boilerplate.wizard.mrp.bom" src_model="mrp.bom"
+			view_type="form" view_mode="form" target="new" view_id="boilerplates_wiz_mrp_bom"
 			domain="[('remote_id', '=', active_id)]" />
 
 	</data>
