--- a/boilerplates_purchase/wizard/boilerplates_view.xml
+++ b/boilerplates_purchase/wizard/boilerplates_view.xml
@@ -4,7 +4,7 @@
 
 		<record id="boilerplates_wiz" model="ir.ui.view">
 			<field name="name">Boilerplates</field>
-			<field name="model">boilerplate.wizard.purchase</field>
+			<field name="model">boilerplate.wizard.purchase.order</field>
 			<field name="type">form</field>
 			<field name="inherit_id" ref="boilerplates.boilerplates_wiz" />
 			<field name="arch" type="xml">
@@ -14,10 +14,28 @@
 			</field>
 		</record>
 
-		<act_window id="action_boilerplate_purchase" name="Add Boilerplate"
-			res_model="boilerplate.wizard.purchase" src_model="purchase.order" view_type="form"
-			view_mode="form" target="new" view_id="boilerplates_wiz"
-			domain="[('remote_id', '=', active_id)]" />
+		<act_window id="action_boilerplate_purchase_order" name="Add Boilerplate"
+			res_model="boilerplate.wizard.purchase.order" src_model="purchase.order"
+			view_type="form" view_mode="form" target="new" view_id="boilerplates_wiz"
+			domain="[('remote_id', '=', active_id)]" context="{'search_default_filter_usability_purchase':1}" />
+
+		<record id="boilerplates_wiz_line" model="ir.ui.view">
+			<field name="name">Boilerplates</field>
+			<field name="model">boilerplate.wizard.purchase.order.line</field>
+			<field name="type">form</field>
+			<field name="inherit_id" ref="boilerplates.boilerplates_wiz" />
+			<field name="arch" type="xml">
+				<field name="remote_id" invisible="1" position="replace">
+					<field name="remote_id" invisible="1" />
+				</field>
+			</field>
+		</record>
+
+		<act_window id="action_boilerplate_purchase_order_line"
+			name="Add Boilerplate" res_model="boilerplate.wizard.purchase.order.line"
+			src_model="purchase.order.line" view_type="form" view_mode="form"
+			target="new" view_id="boilerplates_wiz_line" domain="[('remote_id', '=', active_id)]"
+			context="{'search_default_filter_usability_purchase':1}" />
 
 	</data>
 </openerp>
