--- a/boilerplates_purchase/wizard/boilerplates_view.xml
+++ b/boilerplates_purchase/wizard/boilerplates_view.xml
@@ -37,5 +37,19 @@
 			target="new" view_id="boilerplates_wiz_line" domain="[('remote_id', '=', active_id)]"
 			context="{'search_default_filter_usability_purchase':1}" />
 
+
+		<record id="purchase_order_line_form" model="ir.ui.view">
+			<field name="name">boilerplates.purchase.order.line.form</field>
+			<field name="model">purchase.order.line</field>
+			<field name="type">form</field>
+			<field name="inherit_id" ref="purchase.purchase_order_line_form" />
+			<field name="arch" type="xml">
+				<page string="Notes" position="inside">
+                    <button icon="terp-stock_align_left_24" string="Add Boilerplate" name="action_open_boilerplates" type="object"/>
+				</page>
+			</field>
+		</record>
+
+
 	</data>
 </openerp>
