--- a/boilerplates_purchase/wizard/boilerplates_view.xml
+++ b/boilerplates_purchase/wizard/boilerplates_view.xml
@@ -45,7 +45,7 @@
 			<field name="inherit_id" ref="purchase.purchase_order_line_form" />
 			<field name="arch" type="xml">
 				<page string="Notes" position="inside">
-                    <button icon="terp-stock_align_left_24" string="Add Boilerplate" name="action_open_boilerplates" type="object"/>
+                    <button icon="terp-stock_align_left_24" string="Add Boilerplate" name="%(action_boilerplate_purchase_order_line)d" type="action"/>
 				</page>
 			</field>
 		</record>
