--- a/boilerplates_stock/wizard/boilerplates_view.xml
+++ b/boilerplates_stock/wizard/boilerplates_view.xml
@@ -4,7 +4,7 @@
 
 		<record id="boilerplates_wiz" model="ir.ui.view">
 			<field name="name">Boilerplates</field>
-			<field name="model">boilerplate.wizard.stock</field>
+			<field name="model">boilerplate.wizard.stock.picking</field>
 			<field name="type">form</field>
 			<field name="inherit_id" ref="boilerplates.boilerplates_wiz" />
 			<field name="arch" type="xml">
@@ -14,10 +14,10 @@
 			</field>
 		</record>
 
-		<act_window id="action_boilerplate_stock" name="Add Boilerplate"
-			res_model="boilerplate.wizard.stock" src_model="stock.picking" view_type="form"
-			view_mode="form" target="new" view_id="boilerplates_wiz"
-			domain="[('remote_id', '=', active_id)]" />
+		<act_window id="action_boilerplate_stock_picking" name="Add Boilerplate"
+			res_model="boilerplate.wizard.stock.picking" src_model="stock.picking"
+			view_type="form" view_mode="form" target="new" view_id="boilerplates_wiz"
+			domain="[('remote_id', '=', active_id)]" context="{'search_default_filter_usability_stock':1}" />
 
 	</data>
 </openerp>
