--- a/purchase_order_lines/view/purchase_view.xml
+++ b/purchase_order_lines/view/purchase_view.xml
@@ -45,7 +45,7 @@
             <field name="view_id" eval="False"/>
         </record>
         <menuitem action="action_order_line_tree1" id="menu_action_order_line_tree1" parent="purchase.menu_procurement_management"
-            groups="base.group_extended" sequence=40/>
+            groups="base.group_extended" sequence="40"/>
 		 
 
     </data>
