--- a/boilerplates_sale/wizard/boilerplates_view.xml
+++ b/boilerplates_sale/wizard/boilerplates_view.xml
@@ -6,7 +6,7 @@
 			<field name="name">Boilerplates</field>
 			<field name="model">boilerplate.wizard.sale.order.line</field>
 			<field name="type">form</field>
-			<field name="inherit_id" ref="boilerplates.boilerplates_wiz" />
+			<field name="inherit_id" ref="boilerplates.boilerplates_wiz_singlelang" />
 			<field name="arch" type="xml">
 				<field name="remote_id" invisible="1" position="replace">
 					<field name="remote_id" invisible="1" />
