--- a/tagging/view/tagging_view.xml
+++ b/tagging/view/tagging_view.xml
@@ -43,11 +43,13 @@
 							<separator string="Notes" colspan="4" />
 							<field name="notes" colspan="4" nolabel="1" />
 						</page>
+						<page string="Related Tags">
+							<field name="related_tags_ids" colspan="4" nolabel="1" />
+						</page>
 					</notebook>
 				</form>
 			</field>
 		</record>
-
 
 
 		<!-- actions -->
