--- a/stock_merge_picking_sale/view/stock_view.xml
+++ b/stock_merge_picking_sale/view/stock_view.xml
@@ -67,5 +67,18 @@
 			</field>
 		</record>
 
+		<record id="view_move_tree_reception_picking" model="ir.ui.view">
+			<field name="name">stock.picking.stmrpcsl.stock.move.tree2</field>
+			<field name="model">stock.move</field>
+			<field name="type">tree</field>
+			<field name="inherit_id" ref="stock.view_move_tree_reception_picking" />
+			<field name="arch" type="xml">
+				<field name="origin" position="replace">
+					<field name="sale_lookup_order_id" />
+					<field name="sale_client_order_ref" />
+				</field>
+			</field>
+		</record>
+
 	</data>
 </openerp>
