QA requirement 4: Test standard specifications field for (free text) links, like files, dirs, web

--- a/tem/view/tem_view.xml
+++ b/tem/view/tem_view.xml
@@ -193,6 +193,8 @@
 						<page string="Group">
 							<field name="standard" />
 							<newline />
+							<field name="standard_link" colspan="4"/>
+							<newline />
 							<field name="interval" attrs="{'required':[('interval_repeat','!=',False)]}" />
 							<field name="interval_repeat" nolabel="1"
 								attrs="{'required':[('interval','!=',False)]}" />
